# REFINE

injectlib/: CMakeLists.txt  doInject.c  libinject_mpi.c  libinject_mpi_omp.c  libinject_omp-thread.c  libinject_omp.c  libinject_omp_atomics.c  libinject_ser.c  libinject_ser_noff.c
pinfi/: faultinjection.cpp  faultinjection.h  faultinjection_mpi.cpp  faultinjection_omp-thread.cpp  faultinjection_omp.cpp  instcount.cpp  instcount_mpi_omp.cpp  instcount_omp.cpp  makefile.rules  utils.cpp
programs/: .gitignore
programs/golden/omp/AMG/: Makefile.include
programs/golden/omp/AMG2013/: Makefile.include
programs/golden/omp/AMG2013/test/: Makefile
programs/golden/omp/AMG2013/utilities/: mpistubs.h  utilities.h
programs/golden/omp/NPB3.3-OMP-C/config/: make.def
programs/golden/omp/XSBench/src/: Makefile
programs/golden/serial/AMG2013/: Makefile.include
programs/llfi/serial/AMG2013/: Makefile.include
programs/llfi/serial/AMG2013/IJ_mv/: Makefile
programs/pinfi/omp/AMG/: Makefile.include
programs/pinfi/omp/HPCCG-1.0/: Makefile
programs/pinfi/omp/lulesh/: Makefile
programs/pinfi/serial/AMG/: Makefile.include
programs/pinfi/serial/AMG2013/: Makefile.include
programs/refine/omp-ff/HPCCG-1.0/: Makefile
programs/refine/omp/AMG/: Makefile.include
programs/refine/omp/lulesh/: Makefile
programs/refine/serial-noff/HPCCG-1.0/: Makefile
programs/refine/serial/AMG/: Makefile.include
programs/refine/serial/AMG2013/: Makefile.include
programs/refine/serial/lulesh/: Makefile
refine-llvm3.9/lib/CodeGen/: MCFaultInjectionPass.cpp
scripts/: analysis.py  build.py  check-results.py  chi-square-table.py  config.py  data.py  faultinject.py  fi_tools.py  filesizes.json  generate-fi-samples.py  output-json.py  parse-results-json.py  plot-outcomes.py  plot-variability.py  results-all.py  results-safire-large.json  results.json  results.py  run.py  sched.py  srun.py  submit-moab.py
scripts/sc17/: README  data.py  nsamples.py
(+28 files in other folders)
