project (injectlib)
#set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -fomit-frame-pointer -Wall -std=c11 -g")
#set (CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -O3 -fomit-frame-pointer -Wall -std=c++11 -g")
set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -Wall -std=c11 -fPIC")
set (CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -O3 -Wall -std=c++11 -fPIC")
add_library (inject_ser_noff SHARED libinject_ser_noff.c mt64.c)
#add_library (static_inject_ser STATIC libinject_ser.c mt64.c)
add_library (inject_ser SHARED libinject_ser.c mt64.c)
#add_library (static_inject_omp STATIC libinject_omp.c mt64.c)
add_library (inject_omp SHARED libinject_omp.c mt64.c)
add_library (inject_omp_atomics SHARED libinject_omp_atomics.c mt64.c)
install (TARGETS inject_ser_noff inject_ser inject_omp inject_omp_atomics DESTINATION $ENV{HOME}/usr/local/lib)
